--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - name: Checkout test repo
         uses: actions/checkout@v3
-        path: test-repo
+        with:
+          path: test-repo
 
       - name: Checkout API repo
         uses: actions/checkout@v3
