--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -22,11 +22,11 @@ jobs:
           repository: wooyeoup-rho/python-projects
           path: api-repo
 
-      - name: Install docker-compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
+#      - name: Install docker-compose
+#        run: |
+#          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
+#          sudo chmod +x /usr/local/bin/docker-compose
+#          docker-compose version
 
       - name: Create docker-compose for CI
         working-directory: test-repo/cafe-api-tests
@@ -67,14 +67,14 @@ jobs:
 
       - name: Run tests
         working-directory: test-repo/cafe-api-tests
-        run: docker-compose -f docker-compose.ci.yml up --build --abort-on-container-exit --exit-code-from newman
+        run: docker compose -f docker-compose.ci.yml up --build --abort-on-container-exit --exit-code-from newman
 
       - name: Show test results
         if: always()
         working-directory: test-repo/cafe-api-tests
-        run: docker-compose -f docker-compose.ci.yml logs newman
+        run: docker compose -f docker-compose.ci.yml logs newman
 
       - name: Cleanup
         if: always()
         working-directory: test-repo/cafe-api-tests
-        run: docker-compose -f docker-compose.ci.yml down
+        run: docker compose -f docker-compose.ci.yml down
