--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -22,12 +22,6 @@ jobs:
           repository: wooyeoup-rho/python-projects
           path: api-repo
 
-#      - name: Install docker-compose
-#        run: |
-#          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
-#          sudo chmod +x /usr/local/bin/docker-compose
-#          docker-compose version
-
       - name: Create docker-compose for CI
         working-directory: test-repo/cafe-api-tests
         run: |
@@ -35,7 +29,7 @@ jobs:
           services:
             api:
               build:
-                context: ../../../api-repo/flask/cafe-api
+                context: ../../api-repo/flask/cafe-api
               container_name: cafe_api
               ports:
                 - "5000:5000"
